--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -17,6 +17,7 @@
     "from scipy.stats import norm\n",
     "from scipy.stats import bernoulli\n",
     "from scipy.stats import t\n",
+    "from scipy.stats import chi2\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -75,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x244620b20c8>"
+       "<matplotlib.legend.Legend at 0x1d89d2d2b88>"
       ]
      },
      "execution_count": 3,
@@ -160,12 +161,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- If a sample of size $n$ is taken from a population having a normal distribution, then it allows a test to be made of whether the variance of the population has a pre-determined value.\n",
+    "\n",
+    "A test statistic $T$ could be set to be the sum of squares about the sample mean, divided by the nominal value for the variance (i.e. the value to be tested as holding). Then $T$ has a chi-squared distribution with $n − 1$ degrees of freedom. -->\n",
+    "\n",
+    "<!-- For example, if the sample size is 21, the acceptance region for T with a significance level of 5% is between 9.59 and 34.17. -->\n",
+    "\n",
+    "The sample variance $s^2$ is itself a random variable. In the case that $Y_i$ are independent observations from a normal distribution, *Cochran's theorem* shows that $s^2$ follows a scaled chi-squared distribution:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\displaystyle(n-1){\\frac {s^{2}}{\\sigma ^{2}}}\\sim \\chi _{n-1}^{2}$, therefore,  $\\text{C.I.}_{\\text{variance}}: \\displaystyle \\frac{(n-1)s^{2}}{\\chi^{2}_{\\frac{\\alpha}{2}, df}} \\leq \\sigma^2 \\leq \\frac{(n-1)s^{2}}{\\chi^{2}_{1-\\frac{\\alpha}{2}, df}}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance confidence interval at 90% would be [31.99,115.32]\n",
+      "31.99\n",
+      "115.32\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# Basically here we work on confidence intervals but for the variance, therefore we need to use the chi squared function\n",
+    "# We know the std of POPULATION is 4\n",
+    "heights = [167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195]\n",
+    "sample_h_var = np.var(heights, ddof=1)\n",
+    "sample_n = len(heights)\n",
+    "# First I'll get the intervals from the scipy function\n",
+    "alpha = 0.9\n",
+    "dof = sample_n - 1\n",
+    "conf_interv = chi2.interval(alpha,dof)\n",
+    "conf_interv = chi2.interval(alpha,dof)\n",
+    "# Thus we need to estimate the intervals for the variance using its formula\n",
+    "conf_var_interv = [dof*sample_h_var/conf_interv[1],dof*sample_h_var/conf_interv[0]]\n",
+    "i_0 = round(conf_var_interv[0],2)\n",
+    "i_1 = round(conf_var_interv[1],2)\n",
+    "print(f\"Variance confidence interval at 90% would be [{i_0},{i_1}]\")\n",
+    "# could I get directly the intervals using a proper loc and scale from scipy function?\n",
+    "# interval(alpha, df, loc=0, scale=1)\n",
+    "\n",
+    "# Now check with internet example (alpha being significance now)\n",
+    "alpha = (1-alpha)\n",
+    "upper = dof * sample_h_var / chi2.ppf(alpha / 2, dof)\n",
+    "lower = dof * sample_h_var / chi2.ppf(1 - alpha / 2, dof)\n",
+    "print(round(lower,2))\n",
+    "print(round(upper,2))\n",
+    "# chi2.ppf(1-alpha / 2, dof)\n",
+    "# chi2.ppf(alpha / 2, dof)\n"
    ]
   },
   {
@@ -220,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x244620b2588>"
+       "<matplotlib.legend.Legend at 0x1d89e3d2c48>"
       ]
      },
      "execution_count": 7,
